# NDIMon-R

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  app.py  config.json  install.sh  requirements.txt  update.sh
api/: auth.js  package-lock.json  package.json  server.js
api/public/: index.html
api/routes/: AboutMe.js  ApiSettings.js  DeviceSettings.js  NDIDecode.js  NDIEncode.js  NDIFinder.js  Presets.js  Splash.js  Status.js  System.js  VideoOutput.js  lib.js
config/: ndi-group.json  ndimon-about-settings.json  ndimon-dec1-settings.json  ndimon-dec1-status.json  ndimon-device-settings.json  ndimon-find-settings.json  ndimon-rx-settings.json  ndimon-sources.json
finder/: main.cpp
scripts/: build.sh  deploy.sh  install.sh  ndimon-watchdog.sh  setup-deps.sh  status.sh  update.sh
src/: AlsaAudio.cpp  AlsaAudio.h  Config.cpp  Config.h  DRMDisplay.cpp  DRMDisplay.h  IPCServer.cpp  IPCServer.h  MppDecoder.cpp  MppDecoder.h  NDIReceiver.cpp  NDIReceiver.h  PlatformDetect.cpp  PlatformDetect.h  SoftwareDecoder.cpp  SoftwareDecoder.h  V4L2Decoder.cpp  V4L2Decoder.h  VAAPIDecoder.cpp  VAAPIDecoder.h  VideoDecoder.cpp  VideoDecoder.h  main.cpp
systemd/: ndimon-api.service  ndimon-finder.service  ndimon-r.service  ndimon-watchdog.service
templates/: index.html  login.html  ndi.html  settings.html
